<resources>
    <string name="app_name">Lab1</string>
    <string name="hello_message">Hello World!</string>
    <string name="textPersonName" >Type here</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="switchOnOff">Switch on / off               </string>
    <string name="CheckThisOut">Check this out!</string>
    <string name="clickHere">CLICK HERE</string>
    <string name="lookAtMyGUI">Look at my GUI</string>
    <string name="EnterYourEmailAddress">Enter your email address:</string>
    <string name="TypeEmailHere">Type email here</string>
    <string name="TypeYourPass">Type your password:</string>
    <string name="login">LOGIN</string>
    <string name="yProfile">Your profile</string>
    <string name="yName">Your name:</string>
    <string name="enterYourName">Enter your name</string>
    <string name="yEmail">Your email:</string>
    <string name="enterYourEmail">Enter your email</string>
    <string name="yPic">Your picture:</string>
    <string name="clickButtAbvToTakePic">Click the button above to take a picture</string>
    <string name="picButton"></string>
    <string name="chatBtnTxt">Go to chat</string>

    //ChatRoomActivity
    <string name="sendBtnTxt">SEND</string>
    <string name="chatHintTxt">Type here</string>
    <string name="receiveBtnTxt">RECIEVE</string>


    //WeatherForcastAtivity
    <string name="weatherForcast">Go to Weather Forecast</string>


    //menu
    <string name="choice_1_str">Choice 1</string>
    <string name="choice_2_str">Choice 2</string>
    <string name="choice_3_str">Choice 3</string>
    <string name="toolbar_test_str">Go to Toolbar page</string>
    <string name="overflow_choice_str">Overflow Choice</string>
    <string name="alert_tv_str">What is your new message?</string>
    <string name="e_text_type_here_str">Type here</string>
    </resources>
