<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textLogin1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/EnterYourEmailAddress" />

    <EditText
        android:id="@+id/editView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/TypeEmailHere"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/textLogin2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TypeYourPass" />

    <EditText
        android:id="@+id/editView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint=""
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login" />


</LinearLayout>