<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/activity_start"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:alignParentBottom="@dimen/activity_vertical_margin"
    android:alignParentTop="@dimen/activity_vertical_margin"
    android:alignParentRight="@dimen/activity_horizontal_margin"
    android:alignParentLeft="@dimen/activity_horizontal_margin"
tools:context="com.example.AndroidDevelopmentClass.Catalog.StartActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/lookAtMyGUI"
        android:textSize="30dp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="0dp"
        android:text="@string/clickHere" />

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="219dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:text="@string/CheckThisOut" />


    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkbox"
        android:layout_alignParentStart="true"
        android:src="@drawable/flag" />

    <Switch
        android:id="@+id/switchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkbox"
        android:layout_toEndOf="@id/imageButton"
        android:text="@string/switchOnOff" />

    <EditText
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageButton"
        android:hint="@string/textPersonName"
        android:inputType="textPersonName" />


</RelativeLayout>