<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    tools:context=".ChatRoomActivity">

    <ListView
        android:id="@+id/chat_lv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/receive_btn"
        android:layout_alignParentTop="true"/>


    <Button
        android:id="@+id/send_btn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/sendBtnTxt"
        android:layout_marginTop="0dp"
        android:layout_marginRight="0dp"
        android:layout_toLeftOf="@id/chat_et"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"/>


    <EditText
        android:id="@+id/chat_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="11"
        android:inputType="textPersonName"
        android:hint="@string/chatHintTxt"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"/>

    <Button
        android:id="@+id/receive_btn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_toRightOf="@id/chat_et"
        android:text="@string/receiveBtnTxt" />


</RelativeLayout>